--- a/src/Global.css
+++ b/src/Global.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;700;800&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
+
 body {
     background-color: #D7D7D7;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Raleway', sans-serif;
 }
