--- a/src/components/CaixaConteudo/CaixaConteudo.module.css
+++ b/src/components/CaixaConteudo/CaixaConteudo.module.css
@@ -1,13 +1,13 @@
 .container {
     position: absolute;
-    top: 9vw;
+    top: 2vw;
     right: 50vh;
-    left: 40vh;
-    width: 60vw;
-    -height: 80vh;
+    left: 20vh;
+    width: 80vw;
+    height: 92vh;
     max-width: 100%;
     max-height: 100%;
-    border-radius: 3px;
+    border-radius: 10px;
     background-color: #FFFFFF;
 }
 
