--- a/src/pages/Pokemon/Pokemon.module.css
+++ b/src/pages/Pokemon/Pokemon.module.css
@@ -31,7 +31,7 @@
 
 .containerPoke {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: 0;
   padding: 1rem 1rem 2rem 1rem;
   border-radius: 4rem;
@@ -41,13 +41,14 @@
 
 .cardPokemon {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 3fr 1fr;
   grid-gap: 2px;
   border-radius: 1rem;
   margin: .6rem;
   padding: 1rem;
   border-radius: 3px;
   color: white;
+  cursor: pointer;
 }
 
 .cardPokemon ul {
@@ -62,8 +63,17 @@
 
 .cardPokemon img {
   max-width: 100%;
-  height: 80px;
+  height: 70px;
   max-height: 100%;
+}
+
+.pokeIdImage {
+  text-align: right;
+}
+
+.morePokemon {
+  display: flex;
+  justify-content: center;
 }
 
 .cardPokemon:nth-child(odd) {
