--- a/src/pages/Pokemon/Pokemon.module.css
+++ b/src/pages/Pokemon/Pokemon.module.css
@@ -29,13 +29,16 @@
   font-weight: 800;
 }
 
+.boxPoke {
+  background-color: #FFFFFF;
+  padding: 1rem;
+  border-radius: 2rem;
+  text-transform: capitalize;
+}
+
 .containerPoke {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin: 0;
-  padding: 1rem 1rem 2rem 1rem;
-  border-radius: 4rem;
-  background-color: #FFFFFF;
   height: auto;
 }
 
@@ -67,6 +70,10 @@
   max-height: 100%;
 }
 
+.pokemonTypes {
+  padding-top: 1rem;
+}
+
 .pokeIdImage {
   text-align: right;
 }
@@ -74,7 +81,44 @@
 .morePokemon {
   display: flex;
   justify-content: center;
+  padding-top: 1rem;
 }
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonContainer > button {
+  border: none;
+  padding: 0.7rem;
+  background-color: #D7D7D7;
+  color: #FFFFFF;
+  border-radius: 1rem;
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.buttonContainer > button:hover {
+  animation: auraPulseAnimation 1.5s infinite;
+}
+
+@keyframes auraPulseAnimation {
+  0% {
+    opacity: 0.7;
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.2);
+  }
+  50% {
+    opacity: 1;
+    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0.5);
+  }
+  100% {
+    opacity: 0.7;
+    box-shadow: 0 0 0 40px rgba(255, 255, 255, 0);
+  }
+}
+
 
 .cardPokemon:nth-child(odd) {
   background-color: var(--normal);
