--- a/src/components/ModalPok/ModalPok.module.css
+++ b/src/components/ModalPok/ModalPok.module.css
@@ -9,15 +9,97 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 9999;
+    overflow: auto;
   }
   
   .modalContent {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    text-align: center;
+    font-weight: bolder;
     background-color: white;
     border-radius: 8px;
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: 60%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    position: relative;
   }
+
+  .evolutions {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .title {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+  }
+  
+  
+  .pokeHistory {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 2rem;
+    overflow: auto;
+  }
+
+  .pokeHistory > ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+  }
+  
+  .pokeHistory > ul > li {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+  }
+  
+  .pokeHistory > ul > li img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    margin-right: 5px;
+  }
+  
+  .pokeHistory > ul > li span {
+    font-size: 1rem;
+  }
+  
+  .pokemonImage {
+    width: 100%;
+    max-height: 200px;
+    object-fit: contain;
+  }
+
+  .rightContent {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .closeButton {
+    position: absolute;
+    top: 4%;
+    right: 2%;
+    border: none;
+    color: #2E2E2E;
+    background-color: #FFFFFF;
+    padding: .7rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
+  .closeButton:hover {
+    background-color: #d8000085;
+  }
+
+  .closeButton:before {
+    content: 'X';
+  }
+  
