--- a/src/components/ModalPok/ModalPok.module.css
+++ b/src/components/ModalPok/ModalPok.module.css
@@ -101,6 +101,28 @@
   .loading > img {
     width: 30%;
   }
+
+  .carouselArrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    color: #000;
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    z-index: 999;
+  }
+  
+  .carouselArrowPrev {
+    left: 5rem;
+  }
+  
+  .carouselArrowNext {
+    right: 5rem;
+  }
+  
   
   @media (min-width: 1800px) {
     .pokeHistory {
@@ -129,6 +151,7 @@
   .modalContent {
     display: flex;
     justify-content: center;
+    width: 85%;
   }
 
   .title {
@@ -143,6 +166,10 @@
     flex-direction: column;
   }
 
+  .pokeHistory > ul > li {
+    width: 50%;
+  }
+
   .pokemonImage {
     width: 100%;
     max-height: 120px;
@@ -155,6 +182,7 @@
     display: flex;
     justify-content: center;
     height: 55%;
+    width: 95%;
   }
 
   .title {
