--- a/src/components/ModalPok/ModalPok.module.css
+++ b/src/components/ModalPok/ModalPok.module.css
@@ -46,7 +46,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 2rem;
-    overflow: auto;
+    -overflow: auto;
   }
 
   .pokeHistory > ul {
@@ -106,8 +106,8 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 2rem;
-    color: #000;
+    font-size: 3rem;
+    color: #838383;
     background: transparent;
     border: none;
     outline: none;
@@ -116,11 +116,11 @@
   }
   
   .carouselArrowPrev {
-    left: 5rem;
+    left: 4rem;
   }
   
   .carouselArrowNext {
-    right: 5rem;
+    right: 4rem;
   }
   
   
@@ -178,11 +178,14 @@
 }
 
 @media screen and (max-width: 441px) {
+
   .modalContent {
     display: flex;
     justify-content: center;
     height: 55%;
     width: 95%;
+    position: absolute;
+    top: 7vh;
   }
 
   .title {
@@ -201,5 +204,13 @@
 
   .pokemonImage {
     width: 100%;
+  }
+
+  .carouselArrowPrev {
+    left: 2rem;
+  }
+  
+  .carouselArrowNext {
+    right: 2rem;
   }
 }
