--- a/src/Global.css
+++ b/src/Global.css
@@ -33,7 +33,7 @@ body {
   background-color: #D7D7D7;
   -webkit-font-smoothing: antialiased;
   font-family: 'Raleway', sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 ul {
