--- a/src/pages/Pokemon/Pokemon.module.css
+++ b/src/pages/Pokemon/Pokemon.module.css
@@ -64,6 +64,21 @@
   max-height: 100%;
 }
 
+.pokeName {
+  display: inline-block;
+  color: var(--gray-color);
+  background-color: var(--white-color);
+  opacity: 0.5;
+  border-radius: 0.5rem;
+  font-weight: 900;
+  padding: 0.2rem 0.5rem;
+  transition: transform 0.3s ease;
+}
+
+.pokeName:hover {
+  transform: scale(1.1);
+}
+
 .pokemonTypes {
   padding-top: 1rem;
 }
